<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="${relativePackage}.${activityClass}" >
	
    <LinearLayout
            android:id="@+id/ADLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:orientation="vertical" >
    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/buttoms"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ADLayout" >
    
    <Button
         android:id="@+id/button_start"
         style="?android:attr/buttonStyleSmall"
         android:layout_width="70dp"
         android:layout_height="wrap_content"
         android:text="@string/string_start" />
    
	<Button
        android:id="@+id/button_stop"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="70dp"
        android:layout_height="wrap_content" 
        android:text="@string/string_stop" />
    
    <Button
        android:id="@+id/button_clean"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:text="@string/string_clean" />
    
    <Button
        android:id="@+id/button_info"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="70dp"
        android:layout_height="wrap_content" 
        android:text="@string/string_info" />

    </LinearLayout>
    
    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/buttoms" >

        <TextView
            android:id="@+id/tv_logContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:paddingTop="5dp"
            android:textAllCaps="false"
            android:textIsSelectable="false"
            android:textSize="18sp" />
        
    </ScrollView>
    
</RelativeLayout>
